--- a/Orbot-rc-example/Base.lproj/Main.storyboard
+++ b/Orbot-rc-example/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Orbot RC Example" id="It4-h1-r4O">
-                        <barButtonItem key="rightBarButtonItem" image="iphone" catalog="system" id="4oK-Qa-cfo">
+                        <barButtonItem key="rightBarButtonItem" image="network" catalog="system" id="4oK-Qa-cfo">
                             <connections>
                                 <action selector="toggleUrlType:" destination="BYZ-38-t0r" id="JtE-WC-d1P"/>
                             </connections>
@@ -68,7 +68,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="iphone" catalog="system" width="108" height="128"/>
+        <image name="network" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
