--- a/Example/OrbotKit/Base.lproj/Main.storyboard
+++ b/Example/OrbotKit/Base.lproj/Main.storyboard
@@ -2,16 +2,17 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xD0-Au-smP">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Orbot RC Example-->
+        <!--OrbotKit Example-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Orbot_rc_example" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="OrbotKit_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -35,7 +36,7 @@
                             <constraint firstItem="Aw3-ml-G14" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xqp-D7-9Tl"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Orbot RC Example" id="It4-h1-r4O">
+                    <navigationItem key="navigationItem" title="OrbotKit Example" id="It4-h1-r4O">
                         <barButtonItem key="rightBarButtonItem" image="network" catalog="system" id="4oK-Qa-cfo">
                             <connections>
                                 <action selector="toggleUrlType:" destination="BYZ-38-t0r" id="JtE-WC-d1P"/>
